--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: java
-jdk:
-  - openjdk6
-script: 
-  - mvn clean install
+before_install:
+- curl https://raw.github.com/liveSense/all/master/travis-settings.xml --create-dirs
+  -o target/travis/settings.xml
+- openjdk6
+script:
+- mvn deploy --settings target/travis/settings.xml
+env:
+  global:
+  - secure: efw9zineJELbXLgmFugKs1GkgwEnY75JuyG3lCFTFfT4zSGPs7+r7hXK8H8/r+MavchdRMEI1NQkKS0MnpzbVXt14nOr1aG1yTOVTCNhnuAYO47w5XByYBYSSHUCJoPzcZl7TyO5CSFPdO1pN/yJEfJc9d7YcUDLIP2HR3czdK8=
+  - secure: lZBWxcIrAggrz62kC2iOfJP8KVeB3KclpYjCRRtwEP0hmnk1wsDIt9tf61CBAbPsW/r5EymV3I5hvSPm30Ehb/0TOwOCULJQ/MqD10lSYdZVlexTgX53RAzgbsHkfQdElAjSHJ6CiIT9LoBz+WP7rauuS0xinEbQTogn/UQ4+QM=
