--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,12 @@
         <version>1.0.4</version>
 		<relativePath>..</relativePath>
 	</parent>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
 	<scm>
 		<connection>scm:git:https://github.com/liveSense/org.liveSense.framework.jodreports.git</connection>
 		<developerConnection>scm:git:https://github.com/liveSense/org.liveSense.framework.jodreports.git</developerConnection>
 		<url>https://github.com/liveSense/org.liveSense.framework.jodreports</url>
-	  <tag>HEAD</tag>
+	  <tag>1.0.4</tag>
   </scm>
 
 	<artifactId>org.liveSense.framework.jodreports</artifactId>
